# bitcoin_foundation

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml  lint.yml  test.yml
bitcoin_blockchain/: Cargo.toml
bitcoin_blockchain/src/: lib.rs  locks.rs
bitcoin_keys/: Cargo.toml  README.md
bitcoin_keys/src/: bip340.rs  lib.rs  scalar.rs  schnorr.rs
bitcoin_keys/src/ecdsa/: mod.rs  serialized_public_key.rs
bitcoin_keys/src/legacy/: mod.rs  serialized_public_key.rs
bitcoin_scripts/: Cargo.toml
bitcoin_scripts/src/: address.rs  convert.rs  hlc.rs  lib.rs  taproot.rs  types.rs
contrib/: depCargo.toml
