[package]
name = "bitcoin_keys"
version = "0.1.0"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
secp256k1 = "0.24.1"
